Fix cutoff day.

--- a/live/live.css
+++ b/live/live.css
@@ -153,7 +153,7 @@ i {
 
 .container .content {
   margin-top: 50px;
-  margin-left: 60px;
+  margin-left: 65px;
   padding-right: 50px;
 }
 
